--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="NavBar">
         <img class="logo1" src="./ApsysLogo.png" alt="APSYS Logo">
         <li>
-            <ul><a href="/DMS.html" class="active">Home</a></ul>
+            <ul><a href="/index.html" class="active">Home</a></ul>
             <ul><a href="/User_Guide.html">User Guide</a></ul>
             <ul><a href="/Admin.html">Admin</a></ul>
         </li>
