--- a/User_Guide.html
+++ b/User_Guide.html
@@ -17,7 +17,7 @@
     <div class="NavBar">
         <img class="logo1" src="./ApsysLogo.png" alt="APSYS Logo">
         <li>
-            <ul><a href="/DMS.html">Home</a></ul>
+            <ul><a href="/index.html">Home</a></ul>
             <ul><a href="/User_Guide.html" class="active">User Guide</a></ul>
             <ul><a href="/Admin.html">Admin</a></ul>
         </li>
